# step-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
step_parser/: __init__.py  __main__.py  assembly.py  geometry.py  parser.py  report.py
